# Color-Tiles-Solver

./: .gitignore  CMakeLists.txt  board.cpp  board.h  colour.cpp  game.cpp  game.h  main.cpp  movement.cpp  position.cpp  position.h  solver.h
include/: board.h  colour.h  game.h  movement.h  position.h  solver.h
src/: board.cpp  game.cpp  position.cpp  solver.cpp
